# deno-mssql-query

./: Cargo.toml  README.md  appveyor.yml
src/: lib.rs
test/: async_test.ts  connectOptions.ts  direct_test.ts  sync_test.ts  test_deps.ts  worker_test.ts
ts/: MssqlSymbols.ts  callWorker.ts  encodeOptions.ts  mod.ts  mssqlCloseConnection.ts  mssqlCloseConnectionSync.ts  mssqlExecuteQuerySync.ts  mssqlInitialize.ts  mssqlLoadLibrary.ts  mssqlLoadLibrarySync.ts  mssqlOpenConnection.ts  mssqlOpenConnectionSync.ts  mssqlShutdownWorker.ts  parseResult.ts  test.ts  types.ts
ts/worker/: mssqlWorker.js
