[package]
name = "deno-mssql-query"
version = "1.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
libc = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thread-id = "4.0"
tiberius = { version = "0.12", features = ["time"] }
time = "0.3"
tokio = { version = "1", features = ["net", "rt"] }
tokio-util = { version = "0.7.11", features = ["compat"] }